[gd_scene load_steps=38 format=3 uid="uid://biel8sjt8vy5t"]

[ext_resource type="Script" uid="uid://c1lci08gg4rgx" path="res://Scripts/screen_ui.gd" id="2_spr1r"]
[ext_resource type="Resource" uid="uid://dblsu2gs81rs6" path="res://Resources/EventHandlers/UIEventH.tres" id="3_i441f"]
[ext_resource type="AudioStream" uid="uid://bwi4dj7l6pjg1" path="res://Assets/Sounds/Static.wav" id="3_ng3jm"]
[ext_resource type="AudioStream" uid="uid://d0kopd5186laa" path="res://Assets/Sounds/Towns/Cave_Ambient.mp3" id="4_ao4ul"]
[ext_resource type="Texture2D" uid="uid://d1y68mia7jlgh" path="res://Assets/UIPiecies/Screen/Screen4_FullQuality.png" id="4_j0j1u"]
[ext_resource type="AudioStream" uid="uid://idnn507tyewg" path="res://Assets/Sounds/Door.mp3" id="4_wetmy"]
[ext_resource type="PackedScene" uid="uid://dn356hqaf372p" path="res://Scenes/ScreenUI/thrust_slider.tscn" id="5_mda8n"]
[ext_resource type="Texture2D" uid="uid://kxagwb8gq1pm" path="res://Assets/UIPiecies/Screen/Buttons/Button2_Camera 1_FullQuality.png" id="6_kbeeh"]
[ext_resource type="Texture2D" uid="uid://byy7qb0rfhypw" path="res://Assets/UIPiecies/Screen/Buttons/Button2_Camera 1_FullQuality_Pressed.png" id="7_t8pjf"]
[ext_resource type="Texture2D" uid="uid://bxkdjy0yeuig4" path="res://Assets/UIPiecies/Screen/Buttons/Button5_Camera 1_FullQuality.png" id="9_3s488"]
[ext_resource type="Texture2D" uid="uid://2gkqio6ka74a" path="res://Assets/UIPiecies/Screen/Buttons/Button5_Camera 1_FullQuality_Pressed.png" id="10_3csbo"]
[ext_resource type="PackedScene" uid="uid://hiw68h8srifm" path="res://Scenes/ScreenUI/SteeringWheelUI.tscn" id="11_s7gev"]
[ext_resource type="PackedScene" uid="uid://cwnxxystgxrjm" path="res://Scenes/ScreenUI/MissileTab.tscn" id="13_4xtjg"]
[ext_resource type="Texture2D" uid="uid://b13t2vkapums2" path="res://Assets/UIPiecies/Screen/Buttons/Switch.png" id="13_myhbu"]
[ext_resource type="PackedScene" uid="uid://cvhgybnbwc0e4" path="res://Scenes/ScreenUI/Aerophone.tscn" id="13_ruc6v"]
[ext_resource type="Theme" uid="uid://cgma68ateq86o" path="res://Theme/DarkBlueButton.tres" id="14_l0ryv"]
[ext_resource type="Texture2D" uid="uid://6h6f55b8cda3" path="res://Assets/UIPiecies/Screen/Buttons/Switch2.png" id="14_ruc6v"]
[ext_resource type="PackedScene" uid="uid://cugmsxkuwcfc4" path="res://Scenes/ScreenUI/map_marker_controls.tscn" id="14_ua54b"]
[ext_resource type="Texture2D" uid="uid://cub3jskgpfw07" path="res://Assets/UIPiecies/Screen/Buttons/Button6_Camera 1_FullQuality.png" id="15_tpyok"]
[ext_resource type="Texture2D" uid="uid://diws0gke4cls1" path="res://Assets/UIPiecies/Screen/Buttons/Button6_Camera 1_FullQuality_Pressed.png" id="16_sln7g"]
[ext_resource type="Texture2D" uid="uid://ben2ixlvxo42b" path="res://Assets/UIPiecies/Screen/Buttons/Button10_Camera 1_FullQuality.png" id="17_07pwg"]
[ext_resource type="Texture2D" uid="uid://cfwm15q52gd55" path="res://Assets/UIPiecies/Screen/Buttons/Button10_Camera 1_FullQuality_pressed.png" id="18_qqmpd"]
[ext_resource type="Texture2D" uid="uid://cl1clnce643mg" path="res://Assets/UIPiecies/Screen/Buttons/Button4_Camera 1_FullQuality.png" id="21_ue6hp"]
[ext_resource type="Texture2D" uid="uid://bgecu1r7dbryn" path="res://Assets/UIPiecies/Screen/Buttons/Button4_Camera 1_FullQuality_Pressed.png" id="22_oelfy"]
[ext_resource type="StyleBox" uid="uid://ci3yyoa54a17w" path="res://Theme/YellowPanel.tres" id="22_ruc6v"]
[ext_resource type="PackedScene" uid="uid://diq2p5s5u6bc0" path="res://Scenes/ScreenUI/Clock.tscn" id="23_0465a"]
[ext_resource type="Texture2D" uid="uid://c1a25ki32jj1" path="res://Assets/UIPiecies/Screen/ScreenLong3.png" id="27_j0j1u"]
[ext_resource type="FontFile" uid="uid://mwyuu26jo0fk" path="res://Fonts/Bank Gothic Light Regular.otf" id="28_ng3jm"]
[ext_resource type="PackedScene" uid="uid://djgy3lp61vapo" path="res://Resources/Funds/FundsDisplay.tscn" id="28_qwofv"]
[ext_resource type="Texture2D" uid="uid://jo4d26lfwv65" path="res://Assets/UIPiecies/cables2_Camera 1.png" id="30_c0ifk"]
[ext_resource type="PackedScene" uid="uid://bvduhiu1v7ywh" path="res://Scenes/Cards/TownExternalUI.tscn" id="30_myhbu"]
[ext_resource type="Texture2D" uid="uid://b2mw4mnl7ag4s" path="res://Assets/UIPiecies/cables_Camera 1.png" id="31_g4rws"]
[ext_resource type="Script" uid="uid://c11sqafe6873w" path="res://Scripts/Cables.gd" id="31_ua54b"]
[ext_resource type="PackedScene" uid="uid://cjbda0fdx38c4" path="res://Scenes/Cards/card_fight_ui.tscn" id="31_wetmy"]
[ext_resource type="Texture2D" uid="uid://cyf3f6jnxbppj" path="res://Assets/UIPiecies/Screen/PanelBig_FullQuality.png" id="33_vyv2f"]
[ext_resource type="PackedScene" uid="uid://dwhre3xvmvjwf" path="res://Scenes/ScreenUI/Fan.tscn" id="33_xl4i0"]
[ext_resource type="PackedScene" uid="uid://nt73d42f2o1p" path="res://Scenes/ScreenUI/screen_cam.tscn" id="37_6aw6g"]

[node name="ScreenUI" type="CanvasLayer" node_paths=PackedStringArray("_ScreenItems", "MarkerEditorControls", "Thrust", "Steer", "MissileUI", "Cam", "LandButton", "HatchButton", "ShipDockButton", "RegroupButton", "SimulationButton", "SpeedSimulationButton", "MapMarkerButton", "Cables", "DoorSound", "NormalScreen", "FullScreenFrame", "ScreenPanel", "CardFightUI", "TownUI", "Sonar")]
process_mode = 1
layer = 2
follow_viewport_enabled = true
script = ExtResource("2_spr1r")
_ScreenItems = NodePath("NormalScreen/ScreenUi")
MarkerEditorControls = NodePath("NormalScreen/ScreenUi/MapMarkerControls")
Thrust = NodePath("NormalScreen/ThrustSlider")
Steer = NodePath("NormalScreen/ScreenUi/SteeringWheel")
MissileUI = NodePath("NormalScreen/ScreenUi/Missile Tab")
EventHandler = ExtResource("3_i441f")
Cam = NodePath("ScreenCam")
LandButton = NodePath("NormalScreen/LandButton")
HatchButton = NodePath("NormalScreen/OpenHatchButton")
ShipDockButton = NodePath("NormalScreen/ShipDockButton")
RegroupButton = NodePath("NormalScreen/Regroup")
SimulationButton = NodePath("NormalScreen/SimulationButton")
SpeedSimulationButton = NodePath("NormalScreen/SpeedSimulation")
MapMarkerButton = NodePath("NormalScreen/MarkerEditorButton")
Cables = NodePath("Cables")
DoorSound = NodePath("DoorSound")
NormalScreen = NodePath("NormalScreen")
FullScreenFrame = NodePath("ScreenFrameLong")
ScreenPanel = NodePath("Panel")
CardFightUI = NodePath("NormalScreen/CardFightExternalUI")
TownUI = NodePath("NormalScreen/TownUI")
Sonar = NodePath("NormalScreen/ScreenUi/Sonar")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ng3jm")
autoplay = true
bus = &"Sounds"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ao4ul")
volume_db = -6.0
autoplay = true
bus = &"Sounds"

[node name="DoorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wetmy")
volume_db = -12.0
bus = &"MapSounds"

[node name="NormalScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScreenFrame" type="TextureRect" parent="NormalScreen"]
custom_minimum_size = Vector2(0, 38.045)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_j0j1u")
expand_mode = 1

[node name="ThrustSlider" parent="NormalScreen" instance=ExtResource("5_mda8n")]
layout_mode = 1
offset_left = -114.0
offset_top = -371.0
offset_right = -13.0
offset_bottom = -46.0

[node name="ScreenUi" type="Control" parent="NormalScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SteeringWheel" parent="NormalScreen/ScreenUi" instance=ExtResource("11_s7gev")]
layout_mode = 1
anchors_preset = 2
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
grow_horizontal = 1
grow_vertical = 0
PositionOnStart = false

[node name="Missile Tab" parent="NormalScreen/ScreenUi" instance=ExtResource("13_4xtjg")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -533.0
offset_top = -41.0
offset_right = -493.0
offset_bottom = -1.0
grow_horizontal = 0

[node name="MapMarkerControls" parent="NormalScreen/ScreenUi" instance=ExtResource("14_ua54b")]
layout_mode = 1
offset_left = -465.0
offset_right = -425.0

[node name="Fan" parent="NormalScreen/ScreenUi" instance=ExtResource("33_xl4i0")]
position = Vector2(982, -105)
scale = Vector2(1.64062, 1.64062)
frame_progress = 0.96041
frequency = 40.0

[node name="Sonar" parent="NormalScreen/ScreenUi" instance=ExtResource("13_ruc6v")]
layout_mode = 1

[node name="SpeedSimulation" type="TextureButton" parent="NormalScreen" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -606.0
offset_right = -25.0
offset_bottom = -546.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("14_ruc6v")
texture_pressed = ExtResource("13_myhbu")
ignore_texture_size = true
stretch_mode = 0

[node name="SimulationButton" type="TextureButton" parent="NormalScreen" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -527.0
offset_right = -30.0
offset_bottom = -481.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("21_ue6hp")
texture_pressed = ExtResource("22_oelfy")
ignore_texture_size = true
stretch_mode = 0

[node name="InventoryButton" type="TextureButton" parent="NormalScreen" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -49.0
offset_right = -31.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("14_l0ryv")
action_mode = 0
texture_normal = ExtResource("6_kbeeh")
texture_pressed = ExtResource("7_t8pjf")
ignore_texture_size = true
stretch_mode = 0

[node name="Regroup" type="TextureButton" parent="NormalScreen" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -49.0
offset_right = -201.0
offset_bottom = -29.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("14_l0ryv")
texture_normal = ExtResource("15_tpyok")
texture_pressed = ExtResource("16_sln7g")
ignore_texture_size = true
stretch_mode = 0
flip_v = true

[node name="MarkerEditorButton" type="TextureButton" parent="NormalScreen" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -6.0
offset_right = -225.0
offset_bottom = 38.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
texture_normal = ExtResource("6_kbeeh")
texture_pressed = ExtResource("7_t8pjf")
ignore_texture_size = true
stretch_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="NormalScreen"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -606.0
offset_top = -68.0
offset_right = -278.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = ExtResource("22_ruc6v")

[node name="HBoxContainer" type="HBoxContainer" parent="NormalScreen/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NormalScreen/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -25

[node name="Label" type="Label" parent="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Forecast"

[node name="ForecastButton" type="TextureButton" parent="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer" groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("14_ruc6v")
texture_pressed = ExtResource("13_myhbu")
stretch_mode = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="NormalScreen/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -25

[node name="Label2" type="Label" parent="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Grid"

[node name="GridButton" type="TextureButton" parent="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer2" groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("14_ruc6v")
texture_pressed = ExtResource("13_myhbu")
stretch_mode = 5

[node name="VBoxContainer3" type="VBoxContainer" parent="NormalScreen/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -25

[node name="Label3" type="Label" parent="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Steer"

[node name="SteerButton" type="TextureButton" parent="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer3" groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("14_ruc6v")
texture_pressed = ExtResource("13_myhbu")
stretch_mode = 5

[node name="VBoxContainer4" type="VBoxContainer" parent="NormalScreen/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -25

[node name="Label4" type="Label" parent="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Zoom"

[node name="ZoomLevelButton" type="TextureButton" parent="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer4" groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("14_ruc6v")
texture_pressed = ExtResource("13_myhbu")
stretch_mode = 5

[node name="VBoxContainer5" type="VBoxContainer" parent="NormalScreen/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -25

[node name="Label5" type="Label" parent="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "Team"

[node name="TeamButton" type="TextureButton" parent="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer5" groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("14_ruc6v")
texture_pressed = ExtResource("13_myhbu")
stretch_mode = 5

[node name="VBoxContainer6" type="VBoxContainer" parent="NormalScreen/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -25

[node name="Label5" type="Label" parent="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
text = "AeroSonar"

[node name="SonarButton" type="TextureButton" parent="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer6" groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("14_ruc6v")
texture_pressed = ExtResource("13_myhbu")
stretch_mode = 5

[node name="ShipDockButton" type="TextureButton" parent="NormalScreen" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -409.0
offset_right = -116.0
offset_bottom = -390.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("6_kbeeh")
texture_pressed = ExtResource("7_t8pjf")
ignore_texture_size = true
stretch_mode = 0

[node name="MissileButton" type="TextureButton" parent="NormalScreen" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -222.0
offset_right = -225.0
offset_bottom = -177.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("6_kbeeh")
texture_pressed = ExtResource("7_t8pjf")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="OpenHatchButton" type="TextureButton" parent="NormalScreen" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -77.0
offset_right = -225.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("6_kbeeh")
texture_pressed = ExtResource("7_t8pjf")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="RadarButton" type="TextureButton" parent="NormalScreen" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -294.0
offset_right = -225.0
offset_bottom = -249.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("9_3s488")
texture_pressed = ExtResource("10_3csbo")
ignore_texture_size = true
stretch_mode = 0

[node name="LandButton" type="TextureButton" parent="NormalScreen" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -149.0
offset_right = -225.0
offset_bottom = -104.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("17_07pwg")
texture_pressed = ExtResource("18_qqmpd")
ignore_texture_size = true
stretch_mode = 0

[node name="Clock" parent="NormalScreen" instance=ExtResource("23_0465a")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -228.0
offset_top = -209.0
offset_right = -113.0
offset_bottom = -157.0
grow_horizontal = 0

[node name="Pause" type="TextureButton" parent="NormalScreen" groups=["Buttons"]]
process_mode = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -86.0
offset_top = 41.0
offset_right = -31.0
offset_bottom = 84.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("14_l0ryv")
texture_normal = ExtResource("6_kbeeh")
texture_pressed = ExtResource("7_t8pjf")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NormalScreen/Pause"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -25.5
offset_right = 27.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.651769, 0.651769, 0.651769, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("28_ng3jm")
theme_override_font_sizes/font_size = 40
text = "II"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fund_Container" parent="NormalScreen" instance=ExtResource("28_qwofv")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -179.0
offset_top = 9.0
offset_right = -179.0
offset_bottom = 96.0
grow_horizontal = 0
grow_vertical = 1

[node name="CardFightExternalUI" parent="NormalScreen" instance=ExtResource("31_wetmy")]
visible = false
layout_mode = 1

[node name="Pause" type="TextureButton" parent="NormalScreen/CardFightExternalUI" groups=["Buttons"]]
process_mode = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -106.0
offset_top = 25.0
offset_right = -45.0
offset_bottom = 58.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("14_l0ryv")
texture_normal = ExtResource("6_kbeeh")
texture_pressed = ExtResource("7_t8pjf")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="NormalScreen/CardFightExternalUI/Pause"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -25.5
offset_right = 27.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.651769, 0.651769, 0.651769, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("28_ng3jm")
theme_override_font_sizes/font_size = 40
text = "II"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TownUI" parent="NormalScreen" instance=ExtResource("30_myhbu")]
visible = false
layout_mode = 1

[node name="ScreenFrameLong" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(0, 38.045)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("27_j0j1u")
expand_mode = 1

[node name="Cables" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScreenFrame4" type="TextureRect" parent="Cables" groups=["Shakable"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 595.0
offset_top = -237.0
offset_right = -211.0
offset_bottom = -463.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 0)
mouse_filter = 2
texture = ExtResource("30_c0ifk")
expand_mode = 1
script = ExtResource("31_ua54b")
frequency = 10.0
phase_offset = 1.265
max_rotation = 0.0
max_scale_x = 0.0

[node name="ScreenFrame6" type="TextureRect" parent="Cables/ScreenFrame4"]
modulate = Color(0, 0, 0, 0.5)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = 12.0
offset_right = -25.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("30_c0ifk")
expand_mode = 1

[node name="ScreenFrame3" type="TextureRect" parent="Cables" groups=["Shakable"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -303.0
offset_right = -781.0
offset_bottom = -520.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(178, 0)
mouse_filter = 2
texture = ExtResource("31_g4rws")
expand_mode = 1
script = ExtResource("31_ua54b")
frequency = 10.0
phase_offset = 1.265
max_rotation = 0.0
max_scale_x = 0.0

[node name="ScreenFrame6" type="TextureRect" parent="Cables/ScreenFrame3"]
modulate = Color(0, 0, 0, 0.5)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 19.0
offset_right = 12.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("31_g4rws")
expand_mode = 1

[node name="Panel" type="TextureRect" parent="."]
z_index = 1
custom_minimum_size = Vector2(0, 38.045)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -751.0
offset_bottom = -751.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("33_vyv2f")
expand_mode = 1

[node name="PanelShadow" type="TextureRect" parent="Panel"]
modulate = Color(0, 0, 0, 0.8)
show_behind_parent = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("33_vyv2f")
expand_mode = 1

[node name="ClickProtection" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 751.0
offset_bottom = 751.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenCam" parent="." instance=ExtResource("37_6aw6g")]
position = Vector2(640, 360)

[connection signal="AccelerationChangeEnded" from="NormalScreen/ThrustSlider" to="." method="Acceleration_Ended"]
[connection signal="AccelerationChanged" from="NormalScreen/ThrustSlider" to="." method="Acceleration_Changed"]
[connection signal="SteeringDitChanged" from="NormalScreen/ScreenUi/SteeringWheel" to="." method="Steering_Direction_Changed"]
[connection signal="SteeringOffseted" from="NormalScreen/ScreenUi/SteeringWheel" to="." method="Steer_Offseted"]
[connection signal="toggled" from="NormalScreen/SpeedSimulation" to="." method="_on_speed_simulation_toggled"]
[connection signal="pressed" from="NormalScreen/SimulationButton" to="." method="Sim_Pause_Pressed"]
[connection signal="pressed" from="NormalScreen/InventoryButton" to="." method="Inventory_Pressed"]
[connection signal="pressed" from="NormalScreen/Regroup" to="." method="Regroup_Pressed"]
[connection signal="pressed" from="NormalScreen/MarkerEditorButton" to="." method="Marker_Editor_Button_Pressed"]
[connection signal="toggled" from="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer/ForecastButton" to="." method="_on_forecast_button_toggled"]
[connection signal="toggled" from="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer2/GridButton" to="." method="_on_grid_button_toggled"]
[connection signal="toggled" from="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer3/SteerButton" to="." method="_on_steer_button_toggled"]
[connection signal="toggled" from="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer4/ZoomLevelButton" to="." method="_on_zoom_level_button_toggled"]
[connection signal="toggled" from="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer5/TeamButton" to="." method="_on_team_button_toggled"]
[connection signal="toggled" from="NormalScreen/PanelContainer/HBoxContainer/VBoxContainer6/SonarButton" to="." method="_on_sonar_button_toggled"]
[connection signal="pressed" from="NormalScreen/ShipDockButton" to="." method="Ship_Dock_Button_Pressed"]
[connection signal="pressed" from="NormalScreen/MissileButton" to="." method="Missile_Button_Pressed"]
[connection signal="pressed" from="NormalScreen/OpenHatchButton" to="." method="Open_Hatch_Button_Pressed"]
[connection signal="pressed" from="NormalScreen/RadarButton" to="." method="Radar_Button_Pressed"]
[connection signal="pressed" from="NormalScreen/LandButton" to="." method="Land_Pressed"]
[connection signal="pressed" from="NormalScreen/Pause" to="." method="Pause_Pressed"]
[connection signal="pressed" from="NormalScreen/CardFightExternalUI/Pause" to="." method="Pause_Pressed"]
[connection signal="pressed" from="NormalScreen/CardFightExternalUI/Pause" to="NormalScreen/CardFightExternalUI" method="PausePressed"]
